osrm-ga-api.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geo-ga
spec:
  replicas: 1
  template:
    metadata:
      labels:
        api: geo-ga
    spec:
      containers:
      - name: osrm-api-ga
        image: cartography/osrm-backend-docker:latest
        ports:
        - containerPort: 5000
        args:
        - osrm
        - label
        - "http://download.geofabrik.de/north-america/us/georgia-latest.osm.pbf"
