ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: geo-ingress
spec:
  rules:
  - host: myk8sworkshop.com
    http:
      paths:
      - backend:
          serviceName: acppub
          servicePort: 80
